--- a/public/index.html
+++ b/public/index.html
@@ -5,14 +5,62 @@
   <title>Your Location Tracker</title>
   <link rel="stylesheet" href="https://unpkg.com/leaflet/dist/leaflet.css" />
   <style>
-    #map {
-      height: 400px;
-      margin-top: 20px;
-    }
-  </style>
+  body {
+    font-family: 'Segoe UI', sans-serif;
+    background: linear-gradient(135deg, #e0f7fa, #fff);
+    color: #333;
+    text-align: center;
+    margin: 0;
+    padding: 0;
+  }
+
+  h1 {
+    margin-top: 20px;
+    color: #00796b;
+    font-size: 2.5rem;
+    animation: fadeIn 1s ease-in;
+  }
+
+  #status {
+    margin: 20px;
+    font-size: 1.2rem;
+    font-weight: 500;
+    color: #004d40;
+    animation: pulse 2s infinite;
+  }
+
+  #map {
+    height: 400px;
+    width: 90%;
+    max-width: 800px;
+    margin: 0 auto 40px;
+    border-radius: 15px;
+    box-shadow: 0 6px 20px rgba(0, 0, 0, 0.2);
+    animation: slideUp 1s ease-in-out;
+  }
+
+  @keyframes pulse {
+    0% { opacity: 1; }
+    50% { opacity: 0.7; }
+    100% { opacity: 1; }
+  }
+
+  @keyframes fadeIn {
+    from { opacity: 0; transform: translateY(-10px); }
+    to { opacity: 1; transform: translateY(0); }
+  }
+
+  @keyframes slideUp {
+    from { transform: translateY(50px); opacity: 0; }
+    to { transform: translateY(0); opacity: 1; }
+  }
+</style>
+
 </head>
 <body>
   <h1>Your Location Tracker</h1>
+  <div class="spinner" id="spinner"></div>
+
   <div id="status">Getting location...</div>
   <div id="map"></div>
 
