--- a/public/index.html
+++ b/public/index.html
@@ -58,7 +58,7 @@
 
 </head>
 <body>
-  <h1>Current Location</h1>
+  <h1>📍 Current Location</h1>
   <div class="spinner" id="spinner"></div>
 
   <div id="status">Getting location...</div>
